--- a/brain_training/exercises/templates/exercises/memory.html
+++ b/brain_training/exercises/templates/exercises/memory.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-    <html>
-    <head>
-        <title>Memory Exercises</title>
-    </head>
-    <body>
-        <h1>Memory Exercises</h1>
-        <p>Here you can find various exercises to improve your memory.</p>
-        <a href="{% url 'home' %}">Back to Home</a>
-    </body>
-    </html>
+{% extends "exercises/layoute.html" %}
+    {% block title %}
+    Тренировка памяти
+    {% endblock %}
+
+    {% block header %}
+    Упражнения для тренировки памяти
+    {% endblock %}
+
+    {% block content %}
+    <p class="lead">
+    Здесь будут упражнения
+    </p>
+
+    {% endblock %}
