--- a/brain_training/exercises/templates/exercises/problem_solving.html
+++ b/brain_training/exercises/templates/exercises/problem_solving.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
-    <html>
-    <head>
-        <title>Problem Solving Exercises</title>
-    </head>
-    <body>
-        <h1>Problem Solving Exercises</h1>
-        <p>Here you can find various exercises to improve your problem-solving skills.</p>
-        <a href="{% url 'home' %}">Back to Home</a>
-    </body>
-    </html>
+{% extends "exercises/layoute.html" %}
+    {% block title %}
+    Логика
+    {% endblock %}
+
+    {% block header %}
+    Упражнения для тренировки логики
+    {% endblock %}
+
+    {% block content %}
+    <p class="lead">
+    Здесь будут упражнения
+    </p>
+    {% endblock %}
