--- a/brain_training/exercises/templates/exercises/home.html
+++ b/brain_training/exercises/templates/exercises/home.html
@@ -9,14 +9,17 @@
     <!-- Собственные стили -->
     {% load static %}
     <link href="{% static 'exercises/css/styles.css' %}" rel="stylesheet">
+    <link href="{% static 'exercises/css/footer.css' %}" rel="stylesheet">
+
 </head>
 <body>
+    <div class="flex-container">
     <!-- Вертикальная навигационная панель -->
-    <nav class="navbar navbar-light vertical-nav">
+    <nav class="sidebar">
         <div>
-            <a class="navbar-brand" href="#">
-                <img src="{% static 'exercises/images/logo_Olga_brain2.png' %}" alt="Brain Training Logo" width="120" height="120" class="d-inline-block align-top">
-                Brain Training
+            <a class="navbar-brand" href="{% url 'home' %}">
+                <img src="{% static 'exercises/images/logo_Olga_brain2.png' %}" alt="Brain Training Logo" width="120" height="120" class="d-inline-block align-top circle">
+
             </a>
             <div class="navbar-nav">
                 {% include 'exercises/includes/menu.html' %}
@@ -24,20 +27,22 @@
         </div>
     </nav>
 
-    <div class="container mt-4">
-        <h1 class="text-center text-primary">Добро пожаловать на тренировку для мозга</h1> <!-- Синий цвет заголовка -->
+<!-- Основное содержимое -->
+    <div class="container text-center main-content mt-4">
+        <h1 class="text-center text-primary mt-4">Добро пожаловать на тренировку для мозга</h1> <!-- Синий цвет заголовка -->
 
-        <!-- Основное содержание -->
+
         <div class="my-4">
-            {% block content %}
-            {% endblock %}
+            <p>
+                Тренируйте свой мозг: станьте умнее и эффективнее!
+            </p>
         </div>
     </div>
  <!-- Подвал -->
     <footer class="footer-custom text-center text-lg-start mt-4">
         {% include 'exercises/includes/footer.html' %}
     </footer>
-
+</div>
     <!-- Bootstrap JS и зависимости -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
